--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "20.2.4",
+    "@types/qs": "^6.9.8",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -20,6 +21,7 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.23",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
